argocd-apps/media-server-stack/jellyfin/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - jellyfin.lab-home.com
      secretName: jellyfin-tls
  rules:
  - host: jellyfin.lab-home.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              number: 80
